fixed issue with iframe covering tests in firefox.

--- a/app/css/pages/tests/_iframe.scss
+++ b/app/css/pages/tests/_iframe.scss
@@ -1,24 +1,22 @@
 #iframe-wrapper {
-  position: fixed;
+  position: absolute;
   right: auto;
-  left: 34.4%;
-  width: 64.4%;
+  left: 34%;
+  width: 65%;
   height: 98%;
   bottom: 0;
-  // top: 12px;
-  // margin-right: 30px;
   overflow: hidden;
   box-sizing: border-box;
 
   #iframe-container {
     height: 150%;
-    width: 150%;
+    width: 153%;
     transform-origin: left top;
     transform: scale(0.65);
     position: absolute;
     box-shadow: 0 0 12px #CCCCCC;
     bottom: 24px;
-    left: 24px;
+    // left: 24px;
     top: 0;
 
     #iframe-message {
